--- a/work-environment.yml
+++ b/work-environment.yml
@@ -38,7 +38,7 @@
       user: "{{ ansible_user_id }}"
       job: "{{ ansible_user_dir }}/bin/{{ item }}"
     with_items:
-    - update-cluster-cache
+    - update-v3-cluster-cache
     - update-v4-cluster-cache
 
   # Powerline
