Move ~/.config/bash_completion back to ~/.bash_completion
For reasons I don't understand, modifying COMP_WORDBREAKS in
the "clusters" bash completion script works when called from
~/.bash_completion but not from ~/.config/bash_completion, at
least on the bastion hosts.

Modifying COMP_WORDBREAKS affects ALL bash completion scripts
so maybe something else is interfering, and moving the file from
~/.config/bash_completion to ~/.bash_completion changes the call
sequence in my favor.  Who knows...  ¯\_(ツ)_/¯

--- a/work-environment.yml
+++ b/work-environment.yml
@@ -65,7 +65,7 @@
 
   - name: Edit bash_completion script
     blockinfile:
-      path: "{{ ansible_user_dir }}/.config/bash_completion"
+      path: "{{ ansible_user_dir }}/.bash_completion"
       block: "{{ lookup('template', 'bash_completion.j2') }}"
       marker: "{{ blockinfile_marker }}"
       create: yes
