--- a/work-environment.yml
+++ b/work-environment.yml
@@ -7,9 +7,15 @@
 #
 - hosts: all
   vars:
+    # XDG Base Directories
+    # https://specifications.freedesktop.org/basedir-spec/basedir-spec-latest.html
+    xdg_data_home:   "{{ ansible_env.XDG_DATA_HOME   | default(ansible_user_dir + '/.local/share', true) }}"
+    xdg_cache_home:  "{{ ansible_env.XDG_CACHE_HOME  | default(ansible_user_dir + '/.cache', true) }}"
+    xdg_config_home: "{{ ansible_env.XDG_CONFIG_HOME | default(ansible_user_dir + '/.config', true) }}"
+
     # Use this for blockinfile tasks
     blockinfile_marker: "# (work-environment) {mark} ANSIBLE MANAGED BLOCK"
-    ocm_config_dir: "{{ ansible_user_dir }}/.config/ocm"
+    ocm_config_dir: "{{ xdg_config_home }}/ocm"
     ocm_environments: ["integration", "staging", "production"]
     virtualenv_root: "{{ ansible_user_dir }}/env"
   tasks:
@@ -32,23 +38,23 @@
   - name: Copy tmux hook script
     copy:
       src: tmux.hooks
-      dest: "{{ ansible_user_dir }}/.cache/sre/"
+      dest: "{{ xdg_cache_home }}/sre/"
 
   - name: Create v3 cluster cache directory
     file:
-      path: "{{ ansible_user_dir }}/.cache/sre/clusters/v3"
+      path: "{{ xdg_cache_home }}/sre/clusters/v3"
       state: directory
     when: install_v3_files is defined
 
   - name: Create v4 cluster cache directories
     file:
-      path: "{{ ansible_user_dir }}/.cache/ocm/{{ item }}/clusters"
+      path: "{{ xdg_cache_home }}/ocm/{{ item }}/clusters"
       state: directory
     loop: "{{ ocm_environments }}"
 
   - name: Create user directories
     file:
-      path: "{{ ansible_user_dir }}/{{ item }}"
+      path: "{{ item }}"
       state: directory
     loop:
     - "{{ bash_aliases_d }}"
@@ -77,17 +83,17 @@
   - name: Synchronize bash_aliases directory
     synchronize:
       src: bash_aliases/
-      dest: "{{ ansible_user_dir }}/{{ bash_aliases_d }}/"
+      dest: "{{ bash_aliases_d }}/"
 
   - name: Synchronize bash_profile directory
     synchronize:
       src: bash_profile/
-      dest: "{{ ansible_user_dir }}/{{ bash_profile_d }}/"
+      dest: "{{ bash_profile_d }}/"
 
   - name: Synchronize bash_completion directory
     synchronize:
       src: bash_completion/
-      dest: "{{ ansible_user_dir }}/{{ bash_completion_d }}/"
+      dest: "{{ bash_completion_d }}/"
 
   - name: Override PATH in crontab
     cron:
@@ -124,7 +130,7 @@
 
   - name: Generate bash completion code for OpenShift v4 client
     shell:
-      cmd: "{{ ansible_user_dir }}/{{ bindir }}/oc completion bash > {{ ansible_user_dir }}/{{ bash_completion_d }}/oc"
+      cmd: "{{ ansible_user_dir }}/{{ bindir }}/oc completion bash > {{ bash_completion_d }}/oc"
 
   - name: Look up latest OpenShift Cluster Manager release
     uri:
@@ -145,7 +151,7 @@
 
   - name: Generate bash completion code for OpenShift Cluster Manager client
     shell:
-      cmd: "{{ ansible_user_dir }}/{{ bindir }}/ocm completion bash > {{ ansible_user_dir }}/{{ bash_completion_d }}/ocm"
+      cmd: "{{ ansible_user_dir }}/{{ bindir }}/ocm completion bash > {{ bash_completion_d }}/ocm"
 
   # Skip this on bastion hosts because it's already installed.
   - when: "'bastions' not in group_names"
@@ -170,7 +176,7 @@
 
     - name: Generate bash completion code for osdctl
       shell:
-        cmd: "{{ ansible_user_dir }}/{{ bindir }}/osdctl completion bash > {{ ansible_user_dir }}/{{ bash_completion_d }}/osdctl"
+        cmd: "{{ ansible_user_dir }}/{{ bindir }}/osdctl completion bash > {{ bash_completion_d }}/osdctl"
 
   # OpenShift Cluster Manager client configuration
 
@@ -215,7 +221,7 @@
     - name: Synchronize powerline configuration
       synchronize:
         src: config/powerline
-        dest: "{{ ansible_user_dir }}/.config"
+        dest: "{{ xdg_config_home }}"
 
     - name: Source powerline when starting bash
       lineinfile:
