powerline: Use solarized colorscheme

--- a/files/config/powerline/config.json
+++ b/files/config/powerline/config.json
@@ -1,15 +1,15 @@
 {
 	"ext": {
 		"shell": {
-			"colorscheme": "default",
+			"colorscheme": "solarized",
 			"theme": "default"
 		},
 		"tmux": {
-			"colorscheme": "default",
+			"colorscheme": "solarized",
 			"theme": "default"
 		},
 		"vim": {
-			"colorscheme": "default",
+			"colorscheme": "solarized",
 			"theme": "default"
 		}
 	}
